Working on the message listener